--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -32,10 +32,11 @@ section div {
   overflow: hidden;
 }
 section h1 {
-  /* font-family: 'PT Sans Caption'; */
-  font-size: 40px;
+  font-family: 'PT Sans Caption';
+  font-size: 38px;
+  line-height: 45px;
   margin-top: 60px;
-  margin-bottom: 38px;
+  margin-bottom: 25px;
 }
 section p {
   /* font-family: 'PT Sans Caption'; */
@@ -43,15 +44,18 @@ section p {
   line-height: 1.5;
 }
 .text {
-  width: 520px;
+  /* width: 520px; */
+  width: 582px;
   margin: 0 auto;
+  margin-left: 40px;
 }
 section div:nth-of-type(2) h1,
 section div:nth-of-type(2) p{
   margin-left: 30px;
 }
-section div:nth-of-type(1) img {
-  margin-top: 34px;
+section div:nth-of-type(2) img {
+  /* margin-top: 34px; */
+  margin-top: 20px;
 }
 section:nth-of-type(3) div:nth-of-type(1) img {
   margin-top: 60px;
@@ -62,6 +66,9 @@ section:nth-of-type(3) div:nth-of-type(1) img {
 .two {
   margin-top: 20px;
 }
+.about3 {
+  margin-top: 55px;
+}
 .bottom_block {
   width: 800px;
   display: block;
@@ -70,6 +77,7 @@ section:nth-of-type(3) div:nth-of-type(1) img {
   padding-top: 100px;
 }
 section a {
+  font-family: 'PT Sans Caption';
   border: 1px solid black;
   margin-top: 90px;
   text-decoration: none;
@@ -78,6 +86,8 @@ section a {
   padding: 15px 40px;
   background: white;
   border-radius: 4px;
+  border: 1px solid rgba(0,0,0,.4);
+  color: rgba(0,0,0,.4);
   display: inline-block;
 }
 .btn2 {
