--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -49,7 +49,7 @@ a { color: inherit;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 40px;
+  height: 45px;
   padding: 0 20px;
   border-bottom: 1px solid #aaa;
   -webkit-box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.5);
@@ -57,11 +57,11 @@ a { color: inherit;
   background: white;
 }
 .menubar img {
-  height: 100%;
+  height: 80%;
   width: auto;
 }
 .menubar a {
   height: 20px;
-  text-transform: none;
+  text-decoration: none;
   color: #aaa;
 }
