--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -7,11 +7,86 @@
  article img { width: 100%; }
 }
 @media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-article > * { width: calc(100% - 40px); }
+ article > * { width: calc(100% - 40px); }
+ .index-item {
+   width: 700px;
+ }
+ .index-item img {
+   height: 220px;
+   padding-bottom: 20px;
+ }
+ .index-item h1 {
+   font-size: 30px;
+   /* line-height: 40px; */
+   font-weight: bold;
+   padding-bottom: 7px;
+ }
+ .index-item p {
+   font-size: 22px;
+   line-height: 32px;
+   color: rgba(0, 0, 0, 0.5);
+ }
 }
 @media all and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {
-body { min-width: 320px; }
-article > * { width: calc(100% - 40px); }
+  body {
+    min-width: 320px;
+    background: white;
+  }
+  .index-item {
+    display: block;
+    position: relative;
+    width: calc(100% - 40px);
+    margin: 0 auto;
+    padding: 40px 0px;
+    border: none;
+    box-shadow: none;
+    border-radius: 0px;
+  }
+  .index-item img {
+    height: 307px;
+    padding-bottom: 27px;
+  }
+  .index-item h1 {
+    font-size: 32px;
+    line-height: 40px;
+    padding-bottom: 12px;
+  }
+  article > * {
+    width: calc(100% - 40px);
+  }
+  article p, article blockquote, article li, article em {
+    margin-top: 18px;
+    font-size: 18px;
+    line-height: 28px;
+  }
+  article h1 {
+    font-size: 32px;
+    line-height: 34px;
+  }
+  article h2 {
+    font-size: 28px;
+    line-height: 32px;
+  }
+  article h3 {
+    font-size: 22px;
+    line-height: 28px;
+  }
+  article h4 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  article img {
+    margin: 60px auto 0;
+  }
+  article blockquote {
+    border-left: 3px solid black;
+    padding-left: 20px;
+  }
+  article img + h5 {
+    margin-top: 16px;
+    font-size: 16px;
+    line-height: 22px;
+  }
 }
 @media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
  .sidebar { display: none; }
