--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -55,38 +55,48 @@
     width: calc(100% - 40px);
   }
   article p, article blockquote, article li, article em {
+    width: calc(100% - 40px);
     margin-top: 18px;
     font-size: 18px;
-    line-height: 28px;
+    line-height: 30px;
+  }
+  article ul, article ol {
+    width: calc(100% - 40px);
+    padding-left: 20px;
+    margin-top: 18px;
+    font-size: 18px;
+    line-height: 30px;
   }
   article h1 {
-    font-size: 32px;
+    width: calc(100% - 40px);
+    font-size: 30px;
     line-height: 34px;
   }
   article h2 {
-    font-size: 28px;
+    width: calc(100% - 40px);
+    font-size: 26px;
     line-height: 32px;
   }
   article h3 {
+    width: calc(100% - 40px);
     font-size: 22px;
     line-height: 28px;
   }
   article h4 {
+    width: calc(100% - 40px);
     font-size: 20px;
     line-height: 26px;
   }
   article img {
-    margin: 60px auto 0;
+    margin: 70px auto 0;
   }
-  article blockquote {
+  /* article img + h2 {
+    margin-top: 70px;
+  } */
+  /* article blockquote {
     border-left: 3px solid black;
     padding-left: 20px;
-  }
-  article img + h5 {
-    margin-top: 16px;
-    font-size: 16px;
-    line-height: 22px;
-  }
+  } */
 }
 @media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
  .sidebar { display: none; }
