--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -56,7 +56,7 @@
   }
   article p, article blockquote, article li, article em {
     width: calc(100% - 40px);
-    margin-top: 18px;
+    /* margin-top: 18px; */
     font-size: 18px;
     line-height: 30px;
   }
@@ -72,10 +72,18 @@
     font-size: 30px;
     line-height: 34px;
   }
+  article h1 + p {
+    margin-top: 15px;
+    font-size: 20px;
+    line-height: 30px;
+  }
   article h2 {
     width: calc(100% - 40px);
     font-size: 26px;
     line-height: 32px;
+  }
+  article h2 + p {
+    margin-top: 10px;
   }
   article h3 {
     width: calc(100% - 40px);
@@ -90,13 +98,6 @@
   article img {
     margin: 70px auto 0;
   }
-  /* article img + h2 {
-    margin-top: 70px;
-  } */
-  /* article blockquote {
-    border-left: 3px solid black;
-    padding-left: 20px;
-  } */
 }
 @media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
  .sidebar { display: none; }
